<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:baselineAligned="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/LoginName"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:textSize="28dp"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/EnterPass"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:textSize="28dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ConfPass"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textSize="28dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InputMail"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:textSize="28dp"
        android:textColor="#ff2f5419" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:id="@+id/button7"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:textSize="28dp"
        android:background="@drawable/glass_style"
        android:soundEffectsEnabled="true"
        android:textColor="#bb0705" />

</LinearLayout>